# connect

./: .gitignore  AGENTS.md  Dockerfile  eslint.config.js  main.js  main.py  mcp-server.js  package-lock.json  package.json  pyproject.toml
connect/: pdf.py  youtube.py
connect/utils/: logger.py
development-skills/: SKILL_SCHEMA.md
development-skills/connect-mcp/: SKILL.md
development-skills/create-mcp-skill/: SKILL.md
development-skills/nodejs-development/formatting/: SKILL.md
development-skills/nodejs-development/logging/: SKILL.md
development-skills/nodejs-development/testing/: SKILL.md
development-skills/nodejs-development/validation/: SKILL.md
development-skills/python-development/logging/: SKILL.md
development-skills/python-development/testing/: SKILL.md
development-skills/python-development/validation/: SKILL.md
mcp-skills/corriere/: README.md  categories.js  cli.js  fetcher.js
mcp-skills/remarkable/: README.md
mcp-skills/utility/: README.md
mcp-skills/ytmusic/: README.md
skills/remarkable/: README.md
skills/ytmusic/: README.md
src/: main.js  mcp-server.js
src/__tests__/: logger.test.js  mcp-server.integration.test.js
src/utils/: logger.js
tasks/: __init__.py  pdf_reflow.py  render_pdf.js
tests/: test_docker_integration.py  test_extract_blocks.py  test_html_extract.py  test_html_to_story.py  test_insert.py  test_pdf_integration.py  test_pymupdf4llm.py  test_story.py  test_story_writer.py
